# nicegui-chatbot-1

./: Dockerfile.app  LICENSE  Makefile  README.md  config.json.example  docker-compose.yml  pyproject.toml
app/: auth.py  global_config.py  logging_setup.py  main.py  telemetry.py
app/models/: __init__.py  llm.py
app/orchestration/: __init__.py  graph.py  react_agent.py  state.py
app/persistence/: __init__.py  audit.py  db.py
app/tools/: kb_stub.py  ocr_stub.py  stream_stub1.py  stream_stub2.py
app/tracing/: __init__.py  langfuse_integration.py
app/ui/: __init__.py
app/ui/components/: chat_panel.py  footer.py  header.py  metrics_panel.py  response_panel.py  side_panel.py  thoughts_panel.py  tool_selector.py
tests/: test_smoke.py
