[project]
name = "nicegui-chatbot"
version = "0.1.0"
description = "Multi-agent chat framework with NiceGUI, LangGraph, Postgres, and modular orchestration."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = "~=3.12"
license = "MIT"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=45.0.7",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langgraph>=0.6.6",
    "loguru>=0.7.3",
    "nicegui>=2.23.3",
    "openai>=1.102.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.3",
    "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
